<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.lidchanin.crudindiploma.activity.InsideShoppingListUpdateProductPopUpWindowActivity">

    <ImageButton
        android:id="@+id/inside_shopping_list_update_product_pop_up_window_image_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/close"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/inside_shopping_list_update_product_pop_up_window_image_button_close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_cost"
        android:layout_below="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_alignLeft="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_alignStart="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_marginTop="13dp" />

    <ImageButton
        android:id="@+id/inside_shopping_list_update_product_pop_up_window_image_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_white_24dp"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteY="101dp"
        tools:layout_editor_absoluteX="262dp"
        android:contentDescription="@string/update_product"
        android:layout_below="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/inside_shopping_list_update_product_pop_up_window_edit_text_product_name"
        android:layout_marginTop="12dp"
        android:text="@string/update_product" />

</RelativeLayout>
