<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.lidchanin.crudindiploma.activity.InsideShoppingListAddProductPopUpWindowActivity">

    <ImageButton
        android:id="@+id/inside_shopping_list_add_product_pop_up_window_image_button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_close_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/close" />

    <EditText
        android:id="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_name"
        android:layout_below="@+id/inside_shopping_list_add_product_pop_up_window_image_button_close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_alignStart="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_below="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/enter_cost"/>

    <ImageButton
        android:id="@+id/inside_shopping_list_add_product_pop_up_window_image_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:srcCompat="@drawable/ic_add_shopping_cart_black_48dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/add_product"
        android:layout_alignBottom="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_cost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:layout_above="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_alignLeft="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_alignStart="@+id/inside_shopping_list_add_product_pop_up_window_edit_text_product_name"
        android:layout_marginBottom="13dp" />

</RelativeLayout>
